brief-10/kubernetes_sources/vote2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: prod
  labels:
    app: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
        resources:
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
          - containerPort: 80
