brief-10/kubernetes_sources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vote.simplon-lion.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clustvoteapp
            port:
              number: 80
