brief-10/kubernetes_sources/ingress_traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    #traefik.ingress.kubernetes.io/router.middlewares: default-basicauth@kubernetescrd
    #traefik.ingress.kubernetes.io/router.middlewares: default-ipwhitelist@kubernetescrd
spec:
  rules:
  - host: "vote.simplon-lion.space"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: clustvoteapp
            port:
              number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: authsecret
    removeHeader: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 88.166.162.96
